# auto-commit-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
auto_commit/auto_commit/: __init__.py  cli.py  config.py  errors.py  git.py
auto_commit/auto_commit/ai/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  grok_provider.py  mistral_provider.py  openai_provider.py
docs/: faq.md  providers.md
tests/: test_config.py  test_git.py  test_providers.py
